2004-08-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/component.py (ComponentView): New class with
	twisted specific interfaces
	(BaseComponent): remove twisted code and add signals for
	communication with it

	* conf/videotest-jpeg.xml: Change location of png file

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/components/http.py:
	  log stats requests

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/components/http.py:
	  get rid of traceback when no mimetype yet

2004-08-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/reference/Makefile.am:
	* tests/runtests.py:
	  fix distcheck

2004-08-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* doc/Makefile.am:
	* doc/coding-style.txt:
	* doc/gendoc.py:
	* doc/header.py:
	* doc/ideas.txt:
	* doc/reference/Makefile.am:
	* doc/simple.dia:
	  reorganize docs in preparation for the manual

2004-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/Makefile.am:
	  only rebuild docs when source module files change

2004-08-12  Johan Dahlin  <johan@gnome.org>

	* tests/test_component_parse.py: import common
	* tests/test_http.py: New test

2004-08-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/components/http.py:
	  implement getrlimit and fd reservation

2004-08-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/config.py:
	* flumotion/server/controller.py:
	* flumotion/server/launcher.py:
	  adapt debugging

2004-08-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/gui/adminclient.py:
	  throw up a dialog if we can't connect
	* flumotion/utils/log.py:
	  make logging similar to GStreamer's

2004-08-11  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/config.py (FlumotionConfigXML.parseProperties):
	Add support for float values
