@@ -83,6 +83,7 @@
       <property name="device" type="string" required="yes"/>
       <property name="device-height" type="int" required="yes"/>
       <property name="device-width" type="int" required="yes"/>
+      <property name="channel" type="string" required="no"/>
       <property name="height" type="int"/>
       <property name="width" type="int"/>
       <property name="framerate" type="float"/>
