@@ -18,18 +18,28 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Street #330, Boston, MA 02111-1307, USA.
 
+import gst
+import gst.interfaces
+
 from flumotion.components import producer
 
+def state_changed_cb(element, old, new, channel):
+    if old == gst.STATE_NULL and new == gst.STATE_READY:
+        c = element.find_channel_by_name(channel)
+        if c:
+            element.set_channel(c)
+    
 def createComponent(config):
     device = config['device']
     device_width = config['device-width']
     device_height = config['device-height']
+    device_channel = config['channel']
 
     width = config.get('width', 320)
     height = config.get('height', 240)
     framerate = config.get('framerate', 25.0)
     
-    pipeline = ('v4lsrc device=%s copy-mode=true ! '
+    pipeline = ('v4lsrc name=src device=%s copy-mode=true ! '
                 'video/x-raw-yuv,width=%d,height=%d ! videoscale ! '
                 'video/x-raw-yuv,width=%d,height=%d ! videorate ! '
                 'video/x-raw-yuv,framerate=%f') % (device,
@@ -38,7 +48,10 @@ def createComponent(config):
                                                    width, height,
                                                    framerate)
     config['pipeline'] = pipeline
+
+    component = producer.createComponent(config)
+    pipeline = component.get_pipeline() 
+    element = pipeline.get_by_name('src')
+    element.connect('state-change', state_changed_cb, device_channel)
     
-    return producer.createComponent(config)
-
-
+    return component
