@@ -1,0 +1,47 @@
+<?xml version="1.0" standalone="no"?> <!--*- mode: nxml -*-->
+<!DOCTYPE moduleset SYSTEM "moduleset.dtd">
+<?xml-stylesheet type="text/xsl" href="moduleset.xsl"?>
+<moduleset>
+
+  <cvsroot name="gnome.org"
+     root=":pserver:anonymous@anoncvs.gnome.org:/cvs/gnome"
+     password="" />
+  <cvsroot name="gstreamer.freedesktop.org"
+     root=":pserver:anoncvs@cvs.freedesktop.org:/cvs/gstreamer"
+     password="" />
+  <svnroot name="svn.fluendo.com" default="yes"
+     root="https://svn.fluendo.com:/home/svn"
+     password="" />
+
+  <tarball id="python" version="2.3.3" autogenargs="--enable-shared --with-pydebug">
+    <source  href="http://www.python.org/ftp/python/2.3.3/Python-2.3.3.tar.bz2"
+             size="7195007" md5sum="70ada9f65742ab2c77a96bcd6dffd9b1" />
+  </tarball>
+
+  <cvsmodule id="gstreamer" cvsroot="gstreamer.freedesktop.org" autogenargs="--disable-plugin-builddir --disable-tests">
+  </cvsmodule>
+
+  <cvsmodule id="gst-plugins" cvsroot="gstreamer.freedesktop.org">
+    <dependencies>
+      <dep package="gstreamer" />
+    </dependencies>
+  </cvsmodule>
+
+  <cvsmodule id="pygtk" cvsroot="gnome.org">
+  </cvsmodule>
+ 
+  <cvsmodule id="gst-python" cvsroot="gstreamer.freedesktop.org">
+    <dependencies>
+      <dep package="gstreamer" />
+      <dep package="gst-plugins" />
+      <dep package="pygtk" />
+    </dependencies>
+  </cvsmodule>
+
+  <svnmodule id="flumotion" svnroot="svn.fluendo.com">
+    <dependencies>
+      <dep package="gst-python" />
+    </dependencies>
+  </svnmodule>
+
+</moduleset>
